Version 0.9.39dev0813 (13 Aug 2002)
  - Fixed bug 587795: Could not edit a layer with less than two users
    in the calendar.
  - Changed login page so that "Remember login" is not selected by default.
  - Fixed bug: Was not defaulting login name to last person to login.
  - Fixed bug: Events with no time on weekends where not being displayed
    with the weekend background color in the week view.
  - Include a category of "None" when editing an event.
  - Fixed bug 587909: Don't display 12pm for events with no time in
    notifications.
  - Fixed bug 585939: Don't allow empty view names or group names.
  - Fixed bug: Some users encounter an error when logging in because
    the old session cookie (that contained no path info) was not
    being deleted properly.
  - Fixed bug: send_reminders.php was not checking single user status
    properly.
  - Fixed bug: Error in mailto URL in view_entry.php.
  - Fixed bug: Variable $i was being used for both inner and outer for
    loop in del_entry.php.
  - Fixed bug: When adding/editing an event, if you put a leading '0'
    on the start time (like 09), it always warns you that the event
    starts before your working hours (even if it isn't true).
  - Fixed bug 584826: Fixed custom views (week and month) to display
    weekends in different colors.
  - Fixed bug 583842: categories should not be editable when readonly.
    categories were not showing up when readonly
  - Fixed bug 582950: If user has "none" (browser-defined) language
    set as preference, then send_reminders.php was failing to find
    a language translation.
  - Fixed to work when register_globals is set to off.
  - Fixed two syntax errors in user-ldap.php.
  - Fixed HTTP redirect/cookie workaround for MS servers.
  - Added instructions for setting up user authentication (web, http,
    ldap, nis) in INSTALL.html.
  - Added date format setting in preferences.
  - Preferences page now redirects to itself after save rather than